--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.0.14",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.1.8"
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-burger-menu": "^2.8.7"
   }
 }
